--- a/index.html
+++ b/index.html
@@ -1,27 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <!-- TODO: Change icon to my initials -->
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Resume - Kane Mooi</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <!-- TODO: Change icon to my initials -->
-  <link
-    rel="icon"
-    type="image/svg+xml"
-    href="/vite.svg"
-  />
-  <meta
-    name="viewport"
-    content="width=device-width, initial-scale=1.0"
-  />
-  <title>Kane Mooi</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script
-    type="module"
-    src="/src/main.tsx"
-  ></script>
-</body>
-
+  <body class="bg-gray-100">
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
